Fixed testimonial on mobile and added grad date

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -942,7 +942,7 @@ a:hover {
 
 .project-testimonial {
     margin-bottom: 40px;
-    padding: 0 200px;
+    padding: 0 15%;
 }
 
 .project-testimonial-header {
